<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Monitor de Huertos</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Reset</string>
    <string name="action_settings">Configuración</string>

    <!-- Drawer Layout Items -->
    <string-array name="nav_string">
        <item>Sensores</item>
        <item>Gráficos</item>
        <!--item>Estadísticas</item-->
        <item>Datos Almacenados</item>
        <item>Configuración</item>
        <item>Acerca de...</item>
    </string-array>
    <!-- Drawer Layout Icons -->
    <array name="nav_icon">
        <item>@drawable/ic_temperature_512</item>
        <item>@drawable/ic_pie_512</item>
        <!--item>@drawable/ic_estadisticas</item-->
        <item>@drawable/ic_storage</item>
        <item>@drawable/ic_settings_512</item>
        <item>@drawable/ic_info_512</item>
    </array>

    <string name="btn_start">INICIAR</string>
    <string name="btn_stop">DETENER</string>
    <string name="sensor_symbol_value">*</string>
    <string name="sensor_value">000</string>
    <string name="sensor_value_decimal">.0</string>
    <string name="action_remove_item">Elimimar Sensor</string>
    <string name="sensor_name_temp">Temperatura</string>
    <string name="sensor_name_light">Luminosidad</string>
    <string name="sensor_name_hum">Humedad</string>
    <string name="hello_blank_fragment">Desarrollado por Austral 38</string>
    <string name="action_save">Guardar</string>
    <string name="local_service_started">Servicio iniciado</string>
    <string name="service_started">Servicio Iniciado</string>
    <string name="device_detach">Dispositivo desconectado</string>
    <string name="device_attach">Dispositivo conectado</string>
    <string name="sensor_detach">El sensor de temperatura está desconectado</string>
    <string name="stop_monitoring">Ha finalizado la medición</string>
    <string name="no_device">El dispositivo está desconectado o no se han dado los permisos</string>

    <!-- Indicadores -->
    <string name="sensor_low">Baja</string>
    <string name="sensor_medium">Normal</string>
    <string name="sensor_high">Alta</string>
    <string name="on_attach">Se ha conectado un dispositivo</string>
    <string name="on_detach">Se ha desconectado el dispositivo</string>
    <string name="gps">¿Encender GPS?</string>
    <string name="gps_detail">La aplicación necesita acceder a tu ubicación </string>
    <string name="file_selected">Archivos Seleccionados</string>
    <string name="item_selected">1 Archivo seleccionado</string>
    <string name="many_items_selected">Archivos seleccionados</string>
    <string name="title_share_mail">Enviar por...</string>
    <string name="txt_file">Directorio vacío</string>
    <string name="delete">"Borrar"</string>
    <string name="share">"Compartir"</string>
    <string name="title_datamanager">Datos Almacenados</string>

    <string name="hello_world">Hello world!</string>
    <string name="measure_temp">ºC</string>
    <string name="measure_light">lux</string>
    <string name="measure_hum">hs</string>
    <string name="hour">Hora</string>
    <string name="datetime">Fecha/Hora</string>
    <string name="ind_sample">muestra(s)</string>
    <string name="ind_interval">segundo(s)</string>
    <string name="gps_settings">Configurar</string>
    <string name="gps_settings_cancel">Cancelar</string>
    <string name="action_delete">Eliminar</string>
    <string name="about_developed">Desarrollado por TIDE S.A.</string>
    <string name="about_year">2014</string>
    <string name="about_btn">Visitar Sitio Web</string>
    <string name="action_share">Compartir</string>
    <string name="action_to_excell">Exportar  archivo Excel</string>
    <string name="action_to_excel">Exportar a Excel</string>
    <string name="name">Nombre</string>
    <string name="latitude">Latitud</string>
    <string name="longitude">Longitud</string>
    <string name="write_file">Archivo guardado en</string>
    <string name="write_file_error">Error al guardar el archivo</string>
    <string name="only_one_item">Sólo se puede exportar un archivo a la vez</string>
    <string name="error_open_file">Error al abrir el achivo</string>


</resources>
