<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ChartFragment"
    android:orientation="vertical">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/sensor_bg_temp"
        android:layout_margin="10dp"
        android:padding="10dp">
        <RelativeLayout
            android:id="@+id/container_title"
            android:background="@drawable/title_sensor_bg_temp"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="0dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/sensor_name_temp"
                android:id="@+id/sensor_name"
                android:singleLine="true"
                android:textColor="@color/white"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true" />


        </RelativeLayout>
        <com.androidplot.xy.XYPlot
            android:id="@+id/xyplot_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            androidPlot.titleWidget.labelPaint.textSize="@dimen/title_font_size"
            androidPlot.domainLabelWidget.labelPaint.textSize="@dimen/domain_label_font_size"
            androidPlot.rangeLabelWidget.labelPaint.textSize="@dimen/range_label_font_size"
            androidPlot.graphWidget.marginTop="10dp"
            androidPlot.graphWidget.marginLeft="15dp"
            androidPlot.graphWidget.marginBottom="15dp"
            androidPlot.graphWidget.marginRight="10dp"
            androidPlot.graphWidget.rangeLabelPaint.textSize="@dimen/range_tick_label_font_size"
            androidPlot.graphWidget.rangeOriginLabelPaint.textSize="@dimen/range_tick_label_font_size"
            androidPlot.graphWidget.domainLabelPaint.textSize="@dimen/domain_tick_label_font_size"
            androidPlot.graphWidget.domainOriginLabelPaint.textSize="@dimen/domain_tick_label_font_size"

            android:layout_below="@+id/container_title"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/sensor_bg_light"
        android:layout_margin="10dp"
        android:padding="10dp">
        <RelativeLayout
            android:id="@+id/container_title_l"
            android:background="@drawable/title_sensor_bg_light"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="0dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/sensor_name_light"
                android:id="@+id/sensor_name_l"
                android:singleLine="true"
                android:textColor="@color/white"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true" />


        </RelativeLayout>


        <com.androidplot.xy.XYPlot
            android:id="@+id/xyplot_light"
            android:background="@color/black70p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            androidPlot.titleWidget.labelPaint.textSize="@dimen/title_font_size"
            androidPlot.domainLabelWidget.labelPaint.textSize="@dimen/domain_label_font_size"
            androidPlot.rangeLabelWidget.labelPaint.textSize="@dimen/range_label_font_size"
            androidPlot.graphWidget.marginTop="10dp"
            androidPlot.graphWidget.marginLeft="25dp"
            androidPlot.graphWidget.marginBottom="15dp"
            androidPlot.graphWidget.marginRight="10dp"
            androidPlot.graphWidget.rangeLabelPaint.textSize="@dimen/range_tick_label_font_size"
            androidPlot.graphWidget.rangeOriginLabelPaint.textSize="@dimen/range_tick_label_font_size"
            androidPlot.graphWidget.domainLabelPaint.textSize="@dimen/domain_tick_label_font_size"
            androidPlot.graphWidget.domainOriginLabelPaint.textSize="@dimen/domain_tick_label_font_size"

            android:layout_below="@+id/container_title_l"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/sensor_bg_hum"
        android:layout_margin="10dp"
        android:padding="10dp">


        <RelativeLayout
            android:id="@+id/container_title_h"
            android:background="@drawable/title_sensor_bg"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="0dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/sensor_name_hum"
                android:id="@+id/sensor_name_h"
                android:singleLine="true"
                android:textColor="@color/white"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true" />



        </RelativeLayout>

        <com.androidplot.xy.XYPlot
            android:id="@+id/xyplot_hum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            androidPlot.titleWidget.labelPaint.textSize="@dimen/title_font_size"
            androidPlot.domainLabelWidget.labelPaint.textSize="@dimen/domain_label_font_size"
            androidPlot.rangeLabelWidget.labelPaint.textSize="@dimen/range_label_font_size"
            androidPlot.graphWidget.marginTop="10dp"
            androidPlot.graphWidget.marginLeft="15dp"
            androidPlot.graphWidget.marginBottom="15dp"
            androidPlot.graphWidget.marginRight="10dp"
            androidPlot.graphWidget.rangeLabelPaint.textSize="@dimen/range_tick_label_font_size"
            androidPlot.graphWidget.rangeOriginLabelPaint.textSize="@dimen/range_tick_label_font_size"
            androidPlot.graphWidget.domainLabelPaint.textSize="@dimen/domain_tick_label_font_size"
            androidPlot.graphWidget.domainOriginLabelPaint.textSize="@dimen/domain_tick_label_font_size"

            android:layout_below="@+id/container_title_h"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>


</LinearLayout>
